--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,39 @@
   margin-top: 10px;
   border: 3px solid blue;  
 }
+  
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 40px;
+}
+.trip-container {
+    border-radius: 5px;
+    border-width: 3px;
+    border-color: cadetblue;
+    border-style: solid;
+}
+* {
+    box-sizing: content-box;
+}
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
